add: link underline

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* global styles */
+.link {
+  @apply hover:underline;
+  @apply hover:text-primary-700;
+}
